real canary release line

--- a/.github/workflows/deploy-canary.yml
+++ b/.github/workflows/deploy-canary.yml
@@ -24,7 +24,6 @@ jobs:
     - name: yarn build
       run: yarn build
     - name: Deploy canary
-      # run: yarn release --canary
-      run: echo "Canary release dry run"
+      run: yarn release --canary
       env:
         NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
