--- a/.github/workflows/deploy-canary.yml
+++ b/.github/workflows/deploy-canary.yml
@@ -24,6 +24,8 @@ jobs:
     - name: yarn build
       run: yarn build
     - name: Deploy canary
-      run: yarn release --canary
+      run: |
+        [ "${secrets.NPM_TOKEN+x}" ] && echo "//registry.npmjs.org/:_authToken=\${secrets.NPM_TOKEN}" > $HOME/.npmrc || echo "Skipping .npmrc creation"
+        yarn release --canary
       env:
         NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
