--- a/.github/workflows/deploy-canary.yml
+++ b/.github/workflows/deploy-canary.yml
@@ -1,11 +1,11 @@
 name: Canary Release
 
-on:
-  pull_request:
-    branches:
-      - master
-    types:
-      - closed
+on: push
+  # pull_request:
+  #   branches:
+  #     - master
+  #   types:
+  #     - closed
 
 jobs:
   test:
