--- a/.github/workflows/deploy-canary.yml
+++ b/.github/workflows/deploy-canary.yml
@@ -20,14 +20,14 @@ jobs:
       with:
         node-version: 10.x
         registry-url: 'https://wombat-dressing-room.appspot.com/firebase/_ns/'
-    - name: Yarn install
-      run: yarn
-    - name: yarn build
-      run: yarn build
+    # - name: Yarn install
+    #   run: yarn
+    # - name: yarn build
+    #   run: yarn build
     - name: Deploy canary
       run: |
         npm config set registry https://wombat-dressing-room.appspot.com/firebase/_ns/
-        npm config set //wombat-dressing-room.appspot.com/mypackage/_ns:authToken=$NODE_AUTH_TOKEN
+        npm config set //wombat-dressing-room.appspot.com/mypackage/_ns/:authToken=$NODE_AUTH_TOKEN
         npm config set scope "@firebase"
         npm config ls
         npm whoami
