--- a/.github/workflows/deploy-canary.yml
+++ b/.github/workflows/deploy-canary.yml
@@ -33,4 +33,4 @@ jobs:
         npm whoami
         yarn release --canary
       env:
-        NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+        NODE_AUTH_TOKEN: ${{secrets.WOMBOT_NPM_TOKEN}}
