--- a/.github/workflows/deploy-canary.yml
+++ b/.github/workflows/deploy-canary.yml
@@ -21,14 +21,14 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 10.x
-        registry-url: 'https://wombat-dressing-room.appspot.com/firebase/_ns/'
+        registry-url: 'https://wombat-dressing-room.appspot.com/firebase/_ns'
     # - name: Yarn install
     #   run: yarn
     # - name: yarn build
     #   run: yarn build
     - name: Deploy canary
       run: |
-        npm config set registry https://wombat-dressing-room.appspot.com/firebase/_ns/
+        npm config set registry https://wombat-dressing-room.appspot.com/firebase/_ns
         npm config ls
         cat /home/runner/work/_temp/.npmrc
         npm whoami
