--- a/.github/workflows/deploy-canary.yml
+++ b/.github/workflows/deploy-canary.yml
@@ -30,5 +30,5 @@ jobs:
       run: |
         npm config ls
         cat /home/runner/work/_temp/.npmrc
-        npm whoami
+        npm --registry https://wombat-dressing-room.appspot.com/firebase/_ns/ whoami
         yarn release --canary
