--- a/.github/workflows/deploy-canary.yml
+++ b/.github/workflows/deploy-canary.yml
@@ -19,6 +19,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 10.x
+        registry-url: 'https://wombat-dressing-room.appspot.com/firebase/_ns/'
     # - name: Yarn install
     #   run: yarn
     # - name: yarn build
@@ -26,7 +27,7 @@ jobs:
     - name: Deploy canary
       run: |
         npm config set //wombat-dressing-room.appspot.com/firebase/_ns:_authToken $NPM_TOKEN_FIREBASE
-        npm config set //wombat-dressing-room.appspot.com/@firebase/analytics/_ns:_authToken $NPM_TOKEN_ANALYTICS
+        # npm config set //wombat-dressing-room.appspot.com/@firebase/analytics/_ns:_authToken $NPM_TOKEN_ANALYTICS
         npm config ls
         # yarn release --canary
       env:
