--- a/.github/workflows/deploy-canary.yml
+++ b/.github/workflows/deploy-canary.yml
@@ -26,8 +26,9 @@ jobs:
     #   run: yarn build
     - name: Deploy canary
       run: |
-        npm config set //wombat-dressing-room.appspot.com/firebase/_ns/:_authToken $NPM_TOKEN_FIREBASE
-        # npm config set //wombat-dressing-room.appspot.com/@firebase/analytics/_ns/:_authToken $NPM_TOKEN_ANALYTICS
+        npm config set registry https://wombat-dressing-room.appspot.com/firebase/_ns/
+        npm config set //wombat-dressing-room.appspot.com/firebase/_ns/:_authToken=$NPM_TOKEN_FIREBASE
+        # npm config set //wombat-dressing-room.appspot.com/@firebase/analytics/_ns/:_authToken=$NPM_TOKEN_ANALYTICS
         sleep 10
         npm config ls
         # yarn release --canary
