--- a/.github/workflows/deploy-canary.yml
+++ b/.github/workflows/deploy-canary.yml
@@ -20,18 +20,12 @@ jobs:
       with:
         node-version: 10.x
         registry-url: 'https://wombat-dressing-room.appspot.com/firebase/_ns/'
-    # - name: Yarn install
-    #   run: yarn
-    # - name: yarn build
-    #   run: yarn build
+    - name: Yarn install
+      run: yarn
+    - name: yarn build
+      run: yarn build
     - name: Deploy canary
-      run: |
-        npm config set registry https://wombat-dressing-room.appspot.com/firebase/_ns/
-        npm config set //wombat-dressing-room.appspot.com/firebase/_ns/:_authToken=$NPM_TOKEN_FIREBASE
-        npm config set //wombat-dressing-room.appspot.com/@firebase/analytics/_ns/:_authToken=$NPM_TOKEN_ANALYTICS
-        sleep 10
-        npm config ls
-        yarn release --canary
+      run: yarn release --canary --single firebase
       env:
         CI: true
         NPM_TOKEN_FIREBASE: ${{ secrets.NPM_TOKEN_FIREBASE }}
