--- a/.github/workflows/deploy-canary.yml
+++ b/.github/workflows/deploy-canary.yml
@@ -25,7 +25,7 @@ jobs:
     - name: yarn build
       run: yarn build
     - name: Deploy canary
-      run: yarn release --canary --single firebase
+      run: yarn release --canary --single firebase --skipReinstall 
       env:
         CI: true
         NPM_TOKEN_FIREBASE: ${{ secrets.NPM_TOKEN_FIREBASE }}
