--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@firebase/analytics",
-  "version": "0.2.10",
+  "version": "0.2.11",
   "description": "A analytics package for new firebase packages",
   "author": "Firebase <firebase-support@google.com> (https://firebase.google.com/)",
   "main": "dist/index.cjs.js",
@@ -14,8 +14,9 @@
     "lint:fix": "eslint --fix -c .eslintrc.js '**/*.ts' --ignore-path '../../.gitignore'",
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "test": "run-p lint test:browser",
-    "test:browser": "karma start --single-run",
+    "test": "yarn type-check && yarn run-p lint test:browser",
+    "test:browser": "karma start --single-run --nocache",
+    "type-check": "tsc -p . --noEmit",
     "prepare": "yarn build"
   },
   "peerDependencies": {
@@ -24,9 +25,9 @@
   },
   "dependencies": {
     "@firebase/analytics-types": "0.2.5",
-    "@firebase/installations": "0.3.9",
-    "@firebase/util": "0.2.37",
-    "@firebase/component": "0.1.2",
+    "@firebase/installations": "0.4.0",
+    "@firebase/util": "0.2.38",
+    "@firebase/component": "0.1.3",
     "tslib": "1.10.0"
   },
   "license": "Apache-2.0",
