--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@firebase/app",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "The primary entrypoint to the Firebase JS SDK",
   "author": "Firebase <firebase-support@google.com> (https://firebase.google.com/)",
   "main": "dist/index.node.cjs.js",
@@ -18,7 +18,8 @@
     "lint:fix": "eslint --fix -c .eslintrc.js '**/*.ts'  --ignore-path '../../.gitignore'",
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "test": "run-p lint test:browser test:node",
+    "test": "yarn type-check && run-p lint test:browser test:node",
+    "type-check": "tsc -p . --noEmit",
     "test:browser": "karma start --single-run",
     "test:browser:debug": "karma start --browsers Chrome --auto-watch",
     "test:node": "TS_NODE_FILES=true TS_NODE_CACHE=NO TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' nyc --reporter lcovonly -- mocha test/**/*.test.* --opts ../../config/mocha.node.opts",
@@ -27,9 +28,9 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@firebase/app-types": "0.5.0",
-    "@firebase/util": "0.2.37",
-    "@firebase/logger": "0.1.33",
-    "@firebase/component": "0.1.2",
+    "@firebase/util": "0.2.38",
+    "@firebase/logger": "0.1.34",
+    "@firebase/component": "0.1.3",
     "tslib": "1.10.0",
     "dom-storage": "2.1.0",
     "xmlhttprequest": "1.8.0"
