--- a/.github/workflows/test-all.yml
+++ b/.github/workflows/test-all.yml
@@ -20,27 +20,27 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 10.x
-    # - name: Test setup and yarn install
-    #   run: |
-    #     cp config/ci.config.json config/project.json
-    #     yarn
-    # - name: yarn build
-    #   run: yarn build
-    # - name: Run unit tests
-    #   run: xvfb-run yarn test
-    # - name: Generate coverage file
-    #   run: yarn ci:coverage
-    # - name: Run coverage
-    #   uses: coverallsapp/github-action@master
-    #   with:
-    #     github-token: ${{ secrets.GITHUB_TOKEN }}
-    #     path-to-lcov: ./lcov-all.info
-    #   continue-on-error: true
+    - name: Test setup and yarn install
+      run: |
+        cp config/ci.config.json config/project.json
+        yarn
+    - name: yarn build
+      run: yarn build
+    - name: Run unit tests
+      run: xvfb-run yarn test
+    - name: Generate coverage file
+      run: yarn ci:coverage
+    - name: Run coverage
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        path-to-lcov: ./lcov-all.info
+      continue-on-error: true
   deploy:
     name: Canary Deploy
     runs-on: ubuntu-latest
     # if: github.event.pull_request.merged
-    # needs: test
+    needs: test
 
     steps:
     - uses: actions/checkout@v1
@@ -58,6 +58,6 @@ jobs:
         npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
         npm config ls
         cat `npm config get userconfig`
-        npm whoami
+        yarn release --canary
       env:
         NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
