--- a/.github/workflows/misc-checks.yml
+++ b/.github/workflows/misc-checks.yml
@@ -1,7 +1,8 @@
 name: Misc Checks
 
-on: pull_request
-types: [opened, synchronize, edited]
+on:
+  pull_request:
+    types: [opened, synchronize, edited]
 
 jobs:
   test:
