--- a/.github/workflows/test-all.yml
+++ b/.github/workflows/test-all.yml
@@ -1,50 +1,51 @@
 name: Run All Tests
 
-on: 
-  pull_request:
-    branches:
-      - master
-    types:
-      - closed
-  schedule:
-    - cron: '0 6,18 * * *'
+on: push
+# on: 
+#   pull_request:
+#     branches:
+#       - master
+#     types:
+#       - closed
+#   schedule:
+#     - cron: '0 6,18 * * *'
 
 jobs:
-  test:
-    name: Node.js and Browser (Chrome) Tests
-    runs-on: ubuntu-latest
+  # test:
+  #   name: Node.js and Browser (Chrome) Tests
+  #   runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Node (10)
-      uses: actions/setup-node@v1
-      with:
-        node-version: 10.x
-    - name: install Chrome stable
-      run: |
-        sudo apt-get update
-        sudo apt-get install google-chrome-stable
-    - name: Test setup and yarn install
-      run: |
-        cp config/ci.config.json config/project.json
-        yarn
-    - name: yarn build
-      run: yarn build
-    - name: Run unit tests
-      run: xvfb-run yarn test
-    - name: Generate coverage file
-      run: yarn ci:coverage
-    - name: Run coverage
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        path-to-lcov: ./lcov-all.info
-      continue-on-error: true
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Set up Node (10)
+  #     uses: actions/setup-node@v1
+  #     with:
+  #       node-version: 10.x
+  #   - name: install Chrome stable
+  #     run: |
+  #       sudo apt-get update
+  #       sudo apt-get install google-chrome-stable
+  #   - name: Test setup and yarn install
+  #     run: |
+  #       cp config/ci.config.json config/project.json
+  #       yarn
+  #   - name: yarn build
+  #     run: yarn build
+  #   - name: Run unit tests
+  #     run: xvfb-run yarn test
+  #   - name: Generate coverage file
+  #     run: yarn ci:coverage
+  #   - name: Run coverage
+  #     uses: coverallsapp/github-action@master
+  #     with:
+  #       github-token: ${{ secrets.GITHUB_TOKEN }}
+  #       path-to-lcov: ./lcov-all.info
+  #     continue-on-error: true
   deploy:
     name: Canary Deploy
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged
-    needs: test
+    # if: github.event.pull_request.merged
+    # needs: test
 
     steps:
     - uses: actions/checkout@v2
@@ -52,14 +53,17 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 10.x
-        registry-url: 'https://registry.npmjs.org'
+        registry-url: 'https://wombat-dressing-room.appspot.com/firebase/_ns/'
     - name: Yarn install
       run: yarn
     - name: yarn build
       run: yarn build
     - name: Deploy canary
       run: |
-        npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
+        npm config set //wombat-dressing-room.appspot.com/firebase/_ns/=$NPM_TOKEN_FIREBASE
+        npm config set //wombat-dressing-room.appspot.com/@firebase/analytics/_ns/=$NPM_TOKEN_ANALYTICS
         yarn release --canary
       env:
-        NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+        NPM_TOKEN_FIREBASE: ${{secrets.NPM_TOKEN_FIREBASE}}
+        NPM_TOKEN_ANALYTICS: ${{secrets.NPM_TOKEN_ANALYTICS}}
+        CI: true
