--- a/.github/workflows/test-all.yml
+++ b/.github/workflows/test-all.yml
@@ -49,6 +49,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Checkout
+      run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
     - name: Set up Node (10)
       uses: actions/setup-node@v1
       with:
