--- a/packages/rxfire/package.json
+++ b/packages/rxfire/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rxfire",
-  "version": "3.9.13",
+  "version": "3.9.13-canary.a8e366f7",
   "private": false,
   "description": "Firebase JavaScript library RxJS",
   "author": "Firebase <firebase-support@google.com> (https://firebase.google.com/)",
@@ -37,11 +37,11 @@
     "tslib": "1.10.0"
   },
   "peerDependencies": {
-    "firebase": ">= 5.0.0 <8",
+    "firebase": "7.9.1-canary.a8e366f7",
     "rxjs": "6.x.x"
   },
   "devDependencies": {
-    "firebase": "7.9.1",
+    "firebase": "7.9.1-canary.a8e366f7",
     "rollup": "1.28.0",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-node-resolve": "5.2.0",
