--- a/integration/messaging/package.json
+++ b/integration/messaging/package.json
@@ -1,14 +1,14 @@
 {
   "name": "firebase-messaging-selenium-test",
   "private": true,
-  "version": "0.2.1",
+  "version": "0.2.1-canary.a8e366f7",
   "scripts": {
     "pretest:manual": "node ./download-browsers.js",
     "test": "echo 'Tests disabled due to flakiness'",
     "test:manual": "mocha --exit"
   },
   "dependencies": {
-    "firebase": "7.9.1"
+    "firebase": "7.9.1-canary.a8e366f7"
   },
   "devDependencies": {
     "chai": "4.2.0",
