--- a/integration/webpack/package.json
+++ b/integration/webpack/package.json
@@ -1,13 +1,13 @@
 {
   "name": "firebase-webpack-test",
-  "version": "0.2.1",
+  "version": "0.2.1-canary.a8e366f7",
   "private": true,
   "scripts": {
     "pretest": "webpack",
     "test": "karma start --single-run"
   },
   "dependencies": {
-    "firebase": "7.9.1"
+    "firebase": "7.9.1-canary.a8e366f7"
   },
   "devDependencies": {
     "@babel/core": "7.7.7",
