--- a/packages/analytics-interop-types/package.json
+++ b/packages/analytics-interop-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@firebase/analytics-interop-types",
-  "version": "0.1.2",
+  "version": "0.1.2-canary.a8e366f7",
   "description": "@firebase/analytics Types",
   "author": "Firebase <firebase-support@google.com> (https://firebase.google.com/)",
   "license": "Apache-2.0",
