--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@firebase/component",
-  "version": "0.1.5",
+  "version": "0.1.5-canary.a8e366f7",
   "description": "Firebase Component Platform",
   "author": "Firebase <firebase-support@google.com> (https://firebase.google.com/)",
   "main": "dist/index.cjs.js",
@@ -22,7 +22,7 @@
     "prepare": "yarn build"
   },
   "dependencies": {
-    "@firebase/util": "0.2.40",
+    "@firebase/util": "0.2.40-canary.a8e366f7",
     "tslib": "1.10.0"
   },
   "license": "Apache-2.0",
