--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@firebase/database",
-  "version": "0.5.21",
+  "version": "0.5.21-canary.a8e366f7",
   "description": "",
   "author": "Firebase <firebase-support@google.com> (https://firebase.google.com/)",
   "main": "dist/index.node.cjs.js",
@@ -25,17 +25,17 @@
   "license": "Apache-2.0",
   "peerDependencies": {},
   "dependencies": {
-    "@firebase/database-types": "0.4.11",
-    "@firebase/logger": "0.1.35",
-    "@firebase/util": "0.2.40",
-    "@firebase/component": "0.1.5",
-    "@firebase/auth-interop-types": "0.1.2",
+    "@firebase/database-types": "0.4.11-canary.a8e366f7",
+    "@firebase/logger": "0.1.35-canary.a8e366f7",
+    "@firebase/util": "0.2.40-canary.a8e366f7",
+    "@firebase/component": "0.1.5-canary.a8e366f7",
+    "@firebase/auth-interop-types": "0.1.2-canary.a8e366f7",
     "faye-websocket": "0.11.3",
     "tslib": "1.10.0"
   },
   "devDependencies": {
-    "@firebase/app": "0.5.4",
-    "@firebase/app-types": "0.5.1",
+    "@firebase/app": "0.5.4-canary.a8e366f7",
+    "@firebase/app-types": "0.5.1-canary.a8e366f7",
     "rollup": "1.28.0",
     "rollup-plugin-typescript2": "0.25.3",
     "typescript": "3.7.5"
