--- a/packages/firebase/package.json
+++ b/packages/firebase/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firebase",
-  "version": "7.9.1",
+  "version": "7.9.1-canary.a8e366f7",
   "description": "Firebase JavaScript library for web and Node.js",
   "author": "Firebase <firebase-support@google.com> (https://firebase.google.com/)",
   "license": "Apache-2.0",
@@ -38,20 +38,20 @@
   "module": "dist/index.esm.js",
   "react-native": "dist/index.rn.cjs.js",
   "dependencies": {
-    "@firebase/app": "0.5.4",
-    "@firebase/app-types": "0.5.1",
-    "@firebase/auth": "0.13.5",
-    "@firebase/database": "0.5.21",
-    "@firebase/firestore": "1.11.1",
-    "@firebase/functions": "0.4.34",
-    "@firebase/installations": "0.4.2",
-    "@firebase/messaging": "0.6.6",
-    "@firebase/polyfill": "0.3.31",
-    "@firebase/storage": "0.3.26",
-    "@firebase/performance": "0.2.32",
-    "@firebase/remote-config": "0.1.13",
-    "@firebase/analytics": "0.2.13",
-    "@firebase/util": "0.2.40"
+    "@firebase/app": "0.5.4-canary.a8e366f7",
+    "@firebase/app-types": "0.5.1-canary.a8e366f7",
+    "@firebase/auth": "0.13.5-canary.a8e366f7",
+    "@firebase/database": "0.5.21-canary.a8e366f7",
+    "@firebase/firestore": "1.11.1-canary.a8e366f7",
+    "@firebase/functions": "0.4.34-canary.a8e366f7",
+    "@firebase/installations": "0.4.2-canary.a8e366f7",
+    "@firebase/messaging": "0.6.6-canary.a8e366f7",
+    "@firebase/polyfill": "0.3.31-canary.a8e366f7",
+    "@firebase/storage": "0.3.26-canary.a8e366f7",
+    "@firebase/performance": "0.2.32-canary.a8e366f7",
+    "@firebase/remote-config": "0.1.13-canary.a8e366f7",
+    "@firebase/analytics": "0.2.13-canary.a8e366f7",
+    "@firebase/util": "0.2.40-canary.a8e366f7"
   },
   "devDependencies": {
     "rollup": "1.28.0",
