--- a/packages/firestore/package.json
+++ b/packages/firestore/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@firebase/firestore",
-  "version": "1.11.1",
+  "version": "1.11.1-canary.a8e366f7",
   "description": "",
   "author": "Firebase <firebase-support@google.com> (https://firebase.google.com/)",
   "scripts": {
@@ -32,18 +32,18 @@
     "dist"
   ],
   "dependencies": {
-    "@firebase/component": "0.1.5",
-    "@firebase/firestore-types": "1.9.1",
-    "@firebase/logger": "0.1.35",
-    "@firebase/util": "0.2.40",
-    "@firebase/webchannel-wrapper": "0.2.35",
+    "@firebase/component": "0.1.5-canary.a8e366f7",
+    "@firebase/firestore-types": "1.9.1-canary.a8e366f7",
+    "@firebase/logger": "0.1.35-canary.a8e366f7",
+    "@firebase/util": "0.2.40-canary.a8e366f7",
+    "@firebase/webchannel-wrapper": "0.2.35-canary.a8e366f7",
     "@grpc/proto-loader": "^0.5.0",
     "grpc": "1.24.2",
     "tslib": "1.10.0"
   },
   "peerDependencies": {
-    "@firebase/app": "0.x",
-    "@firebase/app-types": "0.x"
+    "@firebase/app": "0.5.4-canary.a8e366f7",
+    "@firebase/app-types": "0.5.1-canary.a8e366f7"
   },
   "devDependencies": {
     "protobufjs": "6.8.8",
