--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@firebase/functions",
-  "version": "0.4.34",
+  "version": "0.4.34-canary.a8e366f7",
   "description": "",
   "author": "Firebase <firebase-support@google.com> (https://firebase.google.com/)",
   "main": "dist/index.node.cjs.js",
@@ -25,11 +25,11 @@
   },
   "license": "Apache-2.0",
   "peerDependencies": {
-    "@firebase/app": "0.x",
-    "@firebase/app-types": "0.x"
+    "@firebase/app": "0.5.4-canary.a8e366f7",
+    "@firebase/app-types": "0.5.1-canary.a8e366f7"
   },
   "devDependencies": {
-    "@firebase/messaging": "0.6.6",
+    "@firebase/messaging": "0.6.6-canary.a8e366f7",
     "rollup": "1.28.0",
     "rollup-plugin-typescript2": "0.25.3",
     "typescript": "3.7.5"
@@ -44,9 +44,9 @@
   },
   "typings": "dist/index.d.ts",
   "dependencies": {
-    "@firebase/functions-types": "0.3.14",
-    "@firebase/messaging-types": "0.4.2",
-    "@firebase/component": "0.1.5",
+    "@firebase/functions-types": "0.3.14-canary.a8e366f7",
+    "@firebase/messaging-types": "0.4.2-canary.a8e366f7",
+    "@firebase/component": "0.1.5-canary.a8e366f7",
     "isomorphic-fetch": "2.2.1",
     "tslib": "1.10.0"
   },
