--- a/packages/polyfill/package.json
+++ b/packages/polyfill/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@firebase/polyfill",
-  "version": "0.3.31",
+  "version": "0.3.31-canary.a8e366f7",
   "description": "",
   "author": "Firebase <firebase-support@google.com> (https://firebase.google.com/)",
   "main": "dist/index.cjs.js",
