filter to app types

--- a/.github/workflows/test-all.yml
+++ b/.github/workflows/test-all.yml
@@ -64,6 +64,7 @@ jobs:
       run: |
         npm config set //wombat-dressing-room.appspot.com/firebase/_ns/=$NPM_TOKEN_FIREBASE
         npm config set //wombat-dressing-room.appspot.com/@firebase/analytics/_ns/=$NPM_TOKEN_ANALYTICS
+        npm config set //wombat-dressing-room.appspot.com/@firebase/app-types/_ns/=$NPM_TOKEN_APP_TYPES
         yarn release --canary
       env:
         NPM_TOKEN_FIREBASE: ${{secrets.NPM_TOKEN_FIREBASE}}
