Try individual publish

--- a/.github/workflows/test-all.yml
+++ b/.github/workflows/test-all.yml
@@ -57,16 +57,22 @@ jobs:
         node-version: 10.x
     - name: Yarn install
       run: yarn
+    # - name: Yarn build
+    #   run: yarn build
     - name: Deploy canary
       run: |
         echo "//wombat-dressing-room.appspot.com/@firebase/app-types/_ns:_authToken=$NPM_TOKEN_APP_TYPES" >> ~/.npmrc
         cat ~/.npmrc
-        yarn release --canary
+        sed -i '' "s/\"version\": \"\([^\"]*\)\"/\"version\": \"\1-canary.$(git rev-parse --short HEAD)\"/g" packages/app-types/package.json
+        npm publish --tag canary --registry https://wombat-dressing-room.appspot.com/@firebase/app-types/_ns
       # run: |
       #   echo "//wombat-dressing-room.appspot.com/@firebase/app-types/_ns/:_authToken=$NPM_TOKEN_APP_TYPES" >> ~/.npmrc
       #   yarn release --canary
       env:
-        NPM_TOKEN_FIREBASE: ${{secrets.NPM_TOKEN_FIREBASE}}
-        NPM_TOKEN_ANALYTICS: ${{secrets.NPM_TOKEN_ANALYTICS}}
-        NPM_TOKEN_APP_TYPES: ${{secrets.NPM_TOKEN_APP_TYPES}}
+        NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN_APP_TYPES}}
         CI: true
+      # env:
+      #   NPM_TOKEN_FIREBASE: ${{secrets.NPM_TOKEN_FIREBASE}}
+      #   NPM_TOKEN_ANALYTICS: ${{secrets.NPM_TOKEN_ANALYTICS}}
+      #   NPM_TOKEN_APP_TYPES: ${{secrets.NPM_TOKEN_APP_TYPES}}
+      #   CI: true
