--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@firebase/analytics",
-  "version": "0.2.13-canary.a8e366f7",
+  "version": "0.2.13",
   "description": "A analytics package for new firebase packages",
   "author": "Firebase <firebase-support@google.com> (https://firebase.google.com/)",
   "main": "dist/index.cjs.js",
@@ -20,14 +20,14 @@
     "prepare": "yarn build"
   },
   "peerDependencies": {
-    "@firebase/app": "0.5.4-canary.a8e366f7",
-    "@firebase/app-types": "0.5.1-canary.a8e366f7"
+    "@firebase/app": "0.5.4",
+    "@firebase/app-types": "0.5.1"
   },
   "dependencies": {
-    "@firebase/analytics-types": "0.2.6-canary.a8e366f7",
-    "@firebase/installations": "0.4.2-canary.a8e366f7",
-    "@firebase/util": "0.2.40-canary.a8e366f7",
-    "@firebase/component": "0.1.5-canary.a8e366f7",
+    "@firebase/analytics-types": "0.2.6",
+    "@firebase/installations": "0.4.2",
+    "@firebase/util": "0.2.40",
+    "@firebase/component": "0.1.5",
     "tslib": "1.10.0"
   },
   "license": "Apache-2.0",
