--- a/packages/firestore-types/package.json
+++ b/packages/firestore-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@firebase/firestore-types",
-  "version": "1.9.1-canary.a8e366f7",
+  "version": "1.9.1",
   "description": "@firebase/firestore Types",
   "author": "Firebase <firebase-support@google.com> (https://firebase.google.com/)",
   "license": "Apache-2.0",
@@ -11,7 +11,7 @@
     "index.d.ts"
   ],
   "peerDependencies": {
-    "@firebase/app-types": "0.5.1-canary.a8e366f7"
+    "@firebase/app-types": "0.5.1"
   },
   "repository": {
     "directory": "packages/firestore-types",
