--- a/integration/browserify/package.json
+++ b/integration/browserify/package.json
@@ -1,13 +1,13 @@
 {
   "name": "firebase-browserify-test",
   "private": true,
-  "version": "0.2.1-canary.a8e366f7",
+  "version": "0.2.1",
   "scripts": {
     "pretest": "mkdirp dist && browserify src/namespace.test.js -o dist/namespace.test.js",
     "test": "karma start --single-run"
   },
   "dependencies": {
-    "firebase": "7.9.1-canary.a8e366f7"
+    "firebase": "7.9.1"
   },
   "devDependencies": {
     "@babel/core": "7.7.7",
