--- a/integration/typescript/package.json
+++ b/integration/typescript/package.json
@@ -1,12 +1,12 @@
 {
   "name": "firebase-typescript-test",
   "private": true,
-  "version": "0.2.1-canary.a8e366f7",
+  "version": "0.2.1",
   "scripts": {
     "test": "karma start --single-run"
   },
   "dependencies": {
-    "firebase": "7.9.1-canary.a8e366f7"
+    "firebase": "7.9.1"
   },
   "devDependencies": {
     "@babel/core": "7.7.7",
