--- a/packages/auth-types/package.json
+++ b/packages/auth-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@firebase/auth-types",
-  "version": "0.9.5-canary.a8e366f7",
+  "version": "0.9.5",
   "description": "@firebase/auth Types",
   "author": "Firebase <firebase-support@google.com> (https://firebase.google.com/)",
   "license": "Apache-2.0",
@@ -11,8 +11,8 @@
     "index.d.ts"
   ],
   "peerDependencies": {
-    "@firebase/app-types": "0.5.1-canary.a8e366f7",
-    "@firebase/util": "0.2.40-canary.a8e366f7"
+    "@firebase/app-types": "0.5.1",
+    "@firebase/util": "0.2.40"
   },
   "repository": {
     "directory": "packages/auth-types",
