--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@firebase/auth",
-  "version": "0.13.5-canary.a8e366f7",
+  "version": "0.13.5",
   "main": "dist/auth.js",
   "module": "dist/auth.esm.js",
   "description": "Javascript library for Firebase Auth SDK",
@@ -19,7 +19,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@firebase/auth-types": "0.9.5-canary.a8e366f7"
+    "@firebase/auth-types": "0.9.5"
   },
   "devDependencies": {
     "google-closure-compiler": "20200112.0.0",
@@ -33,6 +33,6 @@
     "url": "https://github.com/firebase/firebase-js-sdk.git"
   },
   "peerDependencies": {
-    "@firebase/app": "0.5.4-canary.a8e366f7"
+    "@firebase/app": "0.5.4"
   }
 }
