--- a/packages/functions-types/package.json
+++ b/packages/functions-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@firebase/functions-types",
-  "version": "0.3.14-canary.a8e366f7",
+  "version": "0.3.14",
   "description": "@firebase/functions Types",
   "author": "Firebase <firebase-support@google.com> (https://firebase.google.com/)",
   "license": "Apache-2.0",
