--- a/packages/performance-types/package.json
+++ b/packages/performance-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@firebase/performance-types",
-  "version": "0.0.9-canary.a8e366f7",
+  "version": "0.0.9",
   "description": "@firebase/performance Types",
   "author": "Firebase <firebase-support@google.com> (https://firebase.google.com/)",
   "license": "Apache-2.0",
