--- a/packages/remote-config-types/package.json
+++ b/packages/remote-config-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@firebase/remote-config-types",
-  "version": "0.1.6-canary.a8e366f7",
+  "version": "0.1.6",
   "description": "@firebase/remote-config Types",
   "author": "Firebase <firebase-support@google.com> (https://firebase.google.com/)",
   "license": "Apache-2.0",
