--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@firebase/storage",
-  "version": "0.3.26-canary.a8e366f7",
+  "version": "0.3.26",
   "description": "",
   "author": "Firebase <firebase-support@google.com> (https://firebase.google.com/)",
   "main": "dist/index.cjs.js",
@@ -20,14 +20,14 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@firebase/storage-types": "0.3.9-canary.a8e366f7",
-    "@firebase/util": "0.2.40-canary.a8e366f7",
-    "@firebase/component": "0.1.5-canary.a8e366f7",
+    "@firebase/storage-types": "0.3.9",
+    "@firebase/util": "0.2.40",
+    "@firebase/component": "0.1.5",
     "tslib": "1.10.0"
   },
   "peerDependencies": {
-    "@firebase/app": "0.5.4-canary.a8e366f7",
-    "@firebase/app-types": "0.5.1-canary.a8e366f7"
+    "@firebase/app": "0.5.4",
+    "@firebase/app-types": "0.5.1"
   },
   "devDependencies": {
     "rollup": "1.28.0",
