--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@firebase/template",
-  "version": "0.1.0-canary.a8e366f7",
+  "version": "0.1.0",
   "private": true,
   "description": "A template package for new firebase packages",
   "author": "Firebase <firebase-support@google.com> (https://firebase.google.com/)",
@@ -23,11 +23,11 @@
     "prepare": "yarn build"
   },
   "peerDependencies": {
-    "@firebase/app": "0.5.4-canary.a8e366f7",
-    "@firebase/app-types": "0.5.1-canary.a8e366f7"
+    "@firebase/app": "0.5.4",
+    "@firebase/app-types": "0.5.1"
   },
   "dependencies": {
-    "@firebase/template-types": "0.1.0-canary.a8e366f7",
+    "@firebase/template-types": "0.1.0",
     "tslib": "1.10.0"
   },
   "license": "Apache-2.0",
