--- a/.github/workflows/test-all.yml
+++ b/.github/workflows/test-all.yml
@@ -63,7 +63,7 @@ jobs:
       run: |
         echo "//wombat-dressing-room.appspot.com/@firebase/app-types/_ns:_authToken=$NPM_TOKEN_APP_TYPES" >> ~/.npmrc
         cat ~/.npmrc
-        sed -i '' "s/\"version\": \"\([^\"]*\)\"/\"version\": \"\1-canary.$(git rev-parse --short HEAD)\"/g" packages/app-types/package.json
+        sed -i "s/\"version\": \"\([^\"]*\)\"/\"version\": \"\1-canary.$(git rev-parse --short HEAD)\"/g" packages/app-types/package.json
         npm publish --tag canary --registry https://wombat-dressing-room.appspot.com/@firebase/app-types/_ns
       # run: |
       #   echo "//wombat-dressing-room.appspot.com/@firebase/app-types/_ns/:_authToken=$NPM_TOKEN_APP_TYPES" >> ~/.npmrc
