--- a/.github/workflows/test-all.yml
+++ b/.github/workflows/test-all.yml
@@ -62,6 +62,7 @@ jobs:
     - name: Deploy canary
       run: |
         echo "//wombat-dressing-room.appspot.com/@firebase/app-types/_ns:_authToken=$NPM_TOKEN_APP_TYPES" >> ~/.npmrc
+        echo "//wombat-dressing-room.appspot.com/@firebase/app-types/_ns/:_authToken=$NPM_TOKEN_APP_TYPES" >> ~/.npmrc
         cat ~/.npmrc
         sed -i "s/\"version\": \"\([^\"]*\)\"/\"version\": \"\1-canary.$(git rev-parse --short HEAD)\"/g" packages/app-types/package.json
         npm publish --cwd packages/app-types --tag canary --registry https://wombat-dressing-room.appspot.com/@firebase/app-types/_ns
@@ -70,6 +71,8 @@ jobs:
       #   yarn release --canary
       env:
         NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN_APP_TYPES}}
+        NPM_AUTH_TOKEN: ${{secrets.NPM_TOKEN_APP_TYPES}}
+        NPM_TOKEN: ${{secrets.NPM_TOKEN_APP_TYPES}}
         NPM_TOKEN_APP_TYPES: ${{secrets.NPM_TOKEN_APP_TYPES}}
         CI: true
       # env:
